src/uri-parser.c
/* A recursive-descent parser generated by peg 0.1.18 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 36
#line 1 "/Users/rasmus/Development/C/uri/src/uri.leg"

#include "uri/element.h"
#include <stdio.h>

#define YYSTYPE element *
#ifdef __DEBUG__
#define YY_DEBUG 1
#endif

#define YY_INPUT(buf, result, max_size)                                        \
  {                                                                            \
    int yyc;                                                                   \
    if (charbuf && *charbuf != '\0') {                                         \
      yyc = *charbuf++;                                                        \
    } else {                                                                   \
      yyc = EOF;                                                               \
    }                                                                          \
    result = (EOF == yyc) ? 0 : (*(buf) = yyc, 1);                             \
  }

#define YY_RULE(T) T


#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy)
{
  int pos;
  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_gendelims(yycontext *yy); /* 36 */
YY_RULE(int) yy_reserved(yycontext *yy); /* 35 */
YY_RULE(int) yy_decoctet(yycontext *yy); /* 34 */
YY_RULE(int) yy_ls32(yycontext *yy); /* 33 */
YY_RULE(int) yy_h16(yycontext *yy); /* 32 */
YY_RULE(int) yy_hexdigit(yycontext *yy); /* 31 */
YY_RULE(int) yy_IPvFuture(yycontext *yy); /* 30 */
YY_RULE(int) yy_IPv6address(yycontext *yy); /* 29 */
YY_RULE(int) yy_regname(yycontext *yy); /* 28 */
YY_RULE(int) yy_IPv4address(yycontext *yy); /* 27 */
YY_RULE(int) yy_IPliteral(yycontext *yy); /* 26 */
YY_RULE(int) yy_port(yycontext *yy); /* 25 */
YY_RULE(int) yy_host(yycontext *yy); /* 24 */
YY_RULE(int) yy_userinfo(yycontext *yy); /* 23 */
YY_RULE(int) yy_subdelims(yycontext *yy); /* 22 */
YY_RULE(int) yy_pctencoded(yycontext *yy); /* 21 */
YY_RULE(int) yy_unreserved(yycontext *yy); /* 20 */
YY_RULE(int) yy_pchar(yycontext *yy); /* 19 */
YY_RULE(int) yy_segmentnznc(yycontext *yy); /* 18 */
YY_RULE(int) yy_segmentnz(yycontext *yy); /* 17 */
YY_RULE(int) yy_segment(yycontext *yy); /* 16 */
YY_RULE(int) yy_pathnoscheme(yycontext *yy); /* 15 */
YY_RULE(int) yy_path(yycontext *yy); /* 14 */
YY_RULE(int) yy_pathempty(yycontext *yy); /* 13 */
YY_RULE(int) yy_pathrootless(yycontext *yy); /* 12 */
YY_RULE(int) yy_pathabsolute(yycontext *yy); /* 11 */
YY_RULE(int) yy_pathabempty(yycontext *yy); /* 10 */
YY_RULE(int) yy_authority(yycontext *yy); /* 9 */
YY_RULE(int) yy_digit(yycontext *yy); /* 8 */
YY_RULE(int) yy_alpha(yycontext *yy); /* 7 */
YY_RULE(int) yy_EOF(yycontext *yy); /* 6 */
YY_RULE(int) yy_fragment(yycontext *yy); /* 5 */
YY_RULE(int) yy_query(yycontext *yy); /* 4 */
YY_RULE(int) yy_hierpart(yycontext *yy); /* 3 */
YY_RULE(int) yy_Scheme(yycontext *yy); /* 2 */
YY_RULE(int) yy_start(yycontext *yy); /* 1 */

YY_ACTION(void) yy_1_hexdigit(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_hexdigit\n"));
  {
#line 105
  2;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_fragment(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_fragment\n"));
  {
#line 90
   __ = mk_str(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_query(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_query\n"));
  {
#line 88
   __ = mk_str(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_h16(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_h16\n"));
  {
#line 78
  4;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_5_IPv6address(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_5_IPv6address\n"));
  {
#line 70
  2;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_4_IPv6address(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_4_IPv6address\n"));
  {
#line 69
  3;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_3_IPv6address(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_3_IPv6address\n"));
  {
#line 68
  4;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_IPv6address(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_IPv6address\n"));
  {
#line 67
  5;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_IPv6address(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_IPv6address\n"));
  {
#line 66
  6;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_port(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_port\n"));
  {
#line 59
   __ = mk_integer(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_host(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_host\n"));
  {
#line 57
   __ = mk_str(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_userinfo(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_userinfo\n"));
  {
#line 55
   __ = mk_str(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_authority(yycontext *yy, char *yytext, int yyleng)
{
#define p yy->__val[-1]
#define h yy->__val[-2]
#define u yy->__val[-3]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_authority\n"));
  {
#line 53
   __ = mk_authority(u,h,p); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef p
#undef h
#undef u
}
YY_ACTION(void) yy_2_hierpart(yycontext *yy, char *yytext, int yyleng)
{
#define a yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_hierpart\n"));
  {
#line 33
   __ = mk_hirhierarchical_part(mk_str(yytext), 0); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef a
}
YY_ACTION(void) yy_1_hierpart(yycontext *yy, char *yytext, int yyleng)
{
#define a yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_hierpart\n"));
  {
#line 32
   __ = mk_hirhierarchical_part(mk_str(yytext), a); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef a
}
YY_ACTION(void) yy_1_Scheme(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Scheme\n"));
  {
#line 30
   __ = mk_str(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_start(yycontext *yy, char *yytext, int yyleng)
{
#define f yy->__val[-1]
#define q yy->__val[-2]
#define h yy->__val[-3]
#define s yy->__val[-4]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_start\n"));
  {
#line 26
  
  parse_result = mk_uri(s, h, q, f);
;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef f
#undef q
#undef h
#undef s
}

YY_RULE(int) yy_gendelims(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "gendelims"));
  {  int yypos2= yy->__pos, yythunkpos2= yy->__thunkpos;  if (!yymatchChar(yy, ':')) goto l3;  goto l2;
  l3:;	  yy->__pos= yypos2; yy->__thunkpos= yythunkpos2;  if (!yymatchChar(yy, '/')) goto l4;  goto l2;
  l4:;	  yy->__pos= yypos2; yy->__thunkpos= yythunkpos2;  if (!yymatchChar(yy, '?')) goto l5;  goto l2;
  l5:;	  yy->__pos= yypos2; yy->__thunkpos= yythunkpos2;  if (!yymatchChar(yy, '#')) goto l6;  goto l2;
  l6:;	  yy->__pos= yypos2; yy->__thunkpos= yythunkpos2;  if (!yymatchChar(yy, '[')) goto l7;  goto l2;
  l7:;	  yy->__pos= yypos2; yy->__thunkpos= yythunkpos2;  if (!yymatchChar(yy, ']')) goto l8;  goto l2;
  l8:;	  yy->__pos= yypos2; yy->__thunkpos= yythunkpos2;  if (!yymatchChar(yy, '@')) goto l1;
  }
  l2:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "gendelims", yy->__buf+yy->__pos));
  return 1;
  l1:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "gendelims", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_reserved(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "reserved"));
  {  int yypos10= yy->__pos, yythunkpos10= yy->__thunkpos;  if (!yy_gendelims(yy)) goto l11;  goto l10;
  l11:;	  yy->__pos= yypos10; yy->__thunkpos= yythunkpos10;  if (!yy_subdelims(yy)) goto l9;
  }
  l10:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "reserved", yy->__buf+yy->__pos));
  return 1;
  l9:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "reserved", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_decoctet(yycontext *yy)
{
  yyprintf((stderr, "%s\n", "decoctet"));
  l13:;	
  {  int yypos14= yy->__pos, yythunkpos14= yy->__thunkpos;  if (!yy_digit(yy)) goto l14;  goto l13;
  l14:;	  yy->__pos= yypos14; yy->__thunkpos= yythunkpos14;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "decoctet", yy->__buf+yy->__pos));
  return 1;
}
YY_RULE(int) yy_ls32(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "ls32"));
  {  int yypos16= yy->__pos, yythunkpos16= yy->__thunkpos;  if (!yy_h16(yy)) goto l17;  if (!yymatchChar(yy, ':')) goto l17;  if (!yy_h16(yy)) goto l17;  goto l16;
  l17:;	  yy->__pos= yypos16; yy->__thunkpos= yythunkpos16;  if (!yy_IPv4address(yy)) goto l15;
  }
  l16:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "ls32", yy->__buf+yy->__pos));
  return 1;
  l15:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "ls32", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_h16(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "h16"));  if (!yy_hexdigit(yy)) goto l18;  yyDo(yy, yy_1_h16, yy->__begin, yy->__end);
  yyprintf((stderr, "  ok   %s @ %s\n", "h16", yy->__buf+yy->__pos));
  return 1;
  l18:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "h16", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_hexdigit(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "hexdigit"));  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\377\003\176\000\000\000\176\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l19;  yyDo(yy, yy_1_hexdigit, yy->__begin, yy->__end);
  yyprintf((stderr, "  ok   %s @ %s\n", "hexdigit", yy->__buf+yy->__pos));
  return 1;
  l19:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "hexdigit", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_IPvFuture(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "IPvFuture"));  if (!yymatchChar(yy, 'v')) goto l20;  if (!yy_hexdigit(yy)) goto l20;  if (!yymatchChar(yy, '.')) goto l20;
  {  int yypos21= yy->__pos, yythunkpos21= yy->__thunkpos;
  {  int yypos23= yy->__pos, yythunkpos23= yy->__thunkpos;  if (!yy_unreserved(yy)) goto l24;  goto l23;
  l24:;	  yy->__pos= yypos23; yy->__thunkpos= yythunkpos23;  if (!yy_subdelims(yy)) goto l25;  goto l23;
  l25:;	  yy->__pos= yypos23; yy->__thunkpos= yythunkpos23;  if (!yymatchChar(yy, ':')) goto l21;
  }
  l23:;	  goto l22;
  l21:;	  yy->__pos= yypos21; yy->__thunkpos= yythunkpos21;
  }
  l22:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "IPvFuture", yy->__buf+yy->__pos));
  return 1;
  l20:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "IPvFuture", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_IPv6address(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "IPv6address"));
  {  int yypos27= yy->__pos, yythunkpos27= yy->__thunkpos;  if (!yy_h16(yy)) goto l28;  if (!yymatchChar(yy, ':')) goto l28;  yyDo(yy, yy_1_IPv6address, yy->__begin, yy->__end);  if (!yy_ls32(yy)) goto l28;  goto l27;
  l28:;	  yy->__pos= yypos27; yy->__thunkpos= yythunkpos27;  if (!yymatchString(yy, "::")) goto l29;  if (!yy_h16(yy)) goto l29;  if (!yymatchChar(yy, ':')) goto l29;  yyDo(yy, yy_2_IPv6address, yy->__begin, yy->__end);  if (!yy_ls32(yy)) goto l29;  goto l27;
  l29:;	  yy->__pos= yypos27; yy->__thunkpos= yythunkpos27;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\001\000\102\000\000\000\000\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l30;  if (!yymatchString(yy, "::")) goto l30;  if (!yy_h16(yy)) goto l30;  if (!yymatchChar(yy, ':')) goto l30;  yyDo(yy, yy_3_IPv6address, yy->__begin, yy->__end);  if (!yy_ls32(yy)) goto l30;  goto l27;
  l30:;	  yy->__pos= yypos27; yy->__thunkpos= yythunkpos27;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\005\007\102\004\000\000\000\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l31;  if (!yymatchString(yy, "::")) goto l31;  if (!yy_h16(yy)) goto l31;  if (!yymatchChar(yy, ':')) goto l31;  yyDo(yy, yy_4_IPv6address, yy->__begin, yy->__end);  if (!yy_ls32(yy)) goto l31;  goto l27;
  l31:;	  yy->__pos= yypos27; yy->__thunkpos= yythunkpos27;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\005\007\106\004\000\000\000\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l32;  if (!yymatchString(yy, "::")) goto l32;  if (!yy_h16(yy)) goto l32;  if (!yymatchChar(yy, ':')) goto l32;  yyDo(yy, yy_5_IPv6address, yy->__begin, yy->__end);  if (!yy_ls32(yy)) goto l32;  goto l27;
  l32:;	  yy->__pos= yypos27; yy->__thunkpos= yythunkpos27;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\005\007\112\004\000\000\000\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l33;  if (!yymatchString(yy, "::")) goto l33;  if (!yy_h16(yy)) goto l33;  if (!yymatchChar(yy, ':')) goto l33;  if (!yy_ls32(yy)) goto l33;  goto l27;
  l33:;	  yy->__pos= yypos27; yy->__thunkpos= yythunkpos27;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\005\007\122\004\000\000\000\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l34;  if (!yymatchString(yy, "::")) goto l34;  if (!yy_ls32(yy)) goto l34;  goto l27;
  l34:;	  yy->__pos= yypos27; yy->__thunkpos= yythunkpos27;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\005\007\142\004\000\000\000\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l35;  if (!yymatchString(yy, "::")) goto l35;  if (!yy_h16(yy)) goto l35;  goto l27;
  l35:;	  yy->__pos= yypos27; yy->__thunkpos= yythunkpos27;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\005\007\102\004\000\000\000\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l26;  if (!yymatchString(yy, "::")) goto l26;
  }
  l27:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "IPv6address", yy->__buf+yy->__pos));
  return 1;
  l26:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "IPv6address", yy->__buf+yy->__pos));
